ajudst variable color

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="html-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -87,8 +87,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="css-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -114,8 +114,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="js-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -141,8 +141,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="sass-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -168,8 +168,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="figma-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -195,8 +195,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="bootstrap-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -222,8 +222,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="wordpress-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -249,8 +249,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="elementor-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -276,8 +276,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
+                        <stop offset="0%" stop-color="#0c7070" />
+                        <stop offset="100%" stop-color="#0c7070" />
                       </linearGradient>
                     </defs>
                     <circle class="react-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -617,7 +617,7 @@
       1200: {
         slidesPerView: 1.5,
         spaceBetween: 80,
-        centeredSlides: true,
+        centeredSlides: false,
       },
     },
     spaceBetween: 100,
