adjust color primary

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="html-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -93,8 +93,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="css-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -120,8 +120,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="js-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -147,8 +147,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="sass-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -174,8 +174,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="figma-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -201,8 +201,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="bootstrap-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -228,8 +228,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="wordpress-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -255,8 +255,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="elementor-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
@@ -282,8 +282,8 @@
                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
                     <defs>
                       <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#0c7070" />
-                        <stop offset="100%" stop-color="#0c7070" />
+                        <stop offset="0%" stop-color="#9b1212" />
+                        <stop offset="100%" stop-color="#9b1212" />
                       </linearGradient>
                     </defs>
                     <circle class="react-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
