--- a/index.html
+++ b/index.html
@@ -54,25 +54,8 @@
                 <i class="fa-brands fa-html5"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-html">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="html-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>HTML</span>
               </div>
             </div>
 
@@ -81,25 +64,8 @@
                 <i class="fa-brands fa-css3-alt"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-css">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="css-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>CSS</span>
               </div>
             </div>
 
@@ -108,25 +74,8 @@
                 <i class="fa-brands fa-js-square"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-js">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="js-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>JavaScript</span>
               </div>
             </div>
 
@@ -135,25 +84,8 @@
                 <i class="fa-brands fa-sass"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-sass">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="sass-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>SASS</span>
               </div>
             </div>
 
@@ -162,25 +94,8 @@
                 <i class="fa-brands fa-figma"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-figma">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="figma-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>Figma</span>
               </div>
             </div>
 
@@ -189,25 +104,8 @@
                 <i class="fa-brands fa-bootstrap"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-bootstrap">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="bootstrap-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>Bootstrap</span>
               </div>
             </div>
 
@@ -216,25 +114,8 @@
                 <i class="fa-brands fa-wordpress"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-wordpress">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="wordpress-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>Wordpress</span>
               </div>
             </div>
 
@@ -243,52 +124,18 @@
                 <i class="fa-brands fa-elementor"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-elementor">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="elementor-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>Elementor</span>
               </div>
             </div>
 
             <div class="swiper-slide card">
               <div class="card__icon">
-                <i class="fa-brands fa-react"></i>
+                <i class="fa-brands fa-angular"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-react">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#9b1212" />
-                        <stop offset="100%" stop-color="#9b1212" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="react-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>Angular 2+</span>
               </div>
             </div>
 
@@ -297,25 +144,8 @@
                 <i class="fa-brands fa-git-alt"></i>
                 <div class="techs-line"></div>
               </div>
-              <div class="card__progress">
-                <div class="skill">
-                  <div class="outer">
-                    <div class="inner">
-                      <div id="number-git">
-
-                      </div>
-                    </div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
-                    <defs>
-                      <linearGradient id="GradientColor">
-                        <stop offset="0%" stop-color="#770303" />
-                        <stop offset="100%" stop-color="#770303" />
-                      </linearGradient>
-                    </defs>
-                    <circle class="git-progress" cx="60" cy="60" r="55" stroke-linecap="round" />
-                  </svg>
-                </div>
+              <div class="card__text">
+                <span>Git</span>
               </div>
             </div>
 
@@ -358,7 +188,7 @@
             <span>Frontend Developer.</span>
           </div>
           <div class="about__skills-square">
-            <span>React Developer.</span>
+            <span>Angular 2+ Developer.</span>
           </div>
         </div>
 
