--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="about__hero-left"></div>
           <span class="title-name font-upper-small">Matheus</span>
           <img class="detail-1" src="./assets/img/Vector.svg" alt="">
-          <span class="title-left">Sobre</span>
+          <span class="title-left"></span>
           <div class="about__hero-right"></div>
           <div class="about__hero-right-description">
             <h3>Olá! Meu nome é Matheus Cunha...</h3>
@@ -198,7 +198,7 @@
 
       <!-- !Projects -->
       <section class="projects" id="projects">
-        <h2 class="title-left">Projetos</h2>
+        <h2 class="title-left"></h2>
         <img class="detail-1" src="./assets/img/detail-4.svg" alt="">
         <span class="detail-3">
           <img src="./assets/img/detail-2.svg" alt="">
@@ -364,7 +364,7 @@
       <section class="contact" id="contact">
         <span class="title-name font-upper-small">Mensagem</span>
         <img class="detail-1" src="./assets/img/Vector.svg" alt="">
-        <h2 class="title-left">Contato</h2>
+        <h2 class="title-left"></h2>
         <h2 class="title-right">Contato</h2>
         <span class="detail-2">
           <img src="./assets/img/detail-3.svg" alt="">
@@ -405,7 +405,7 @@
 
         <ul class="contact__personal font-normal-small">
           <li><i class="fa-solid fa-envelope"></i>cunhamatheus.m4@gmail.com</li>
-          <li><i class="fa-solid fa-phone"></i>34 99999 9999</li>
+          <li><i class="fa-solid fa-phone"></i>34 99917-6724</li>
         </ul>
       </section>
 
